syntax = "proto3";

package climateaction;

option java_multiple_files = true;
option java_package = "grpc.generated.climateaction.monitor";
option java_outer_classname = "CO2MonitorServiceImpl";


service CO2Monitor {
   // Bidirectional. The client reports the carbon dioxide (CO2) concentration continuously. 
   // The server responds continuously with a rolling statistics of the CO2 concentration over the previous 3 minutes

   rpc ReportCO2(stream CO2Concentration ) returns (CO2Stats) {}
}

message CO2Concentration {
   string id = 1;
   float concentration = 2;
}

message CO2Stats {
   string id = 1;
   float max = 2;
   float min = 3;
   float avg = 4;
}